Добавлены авторизация, регистрация и выход из аккаунта (надо тестировать)
